Project4/Windows/AbsSynTree/MainDriver/COOL.output
Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class class_list

    4 class: CLASS TYPEID '{' optional_feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';'

    6 optional_feature_list: /* empty */
    7                      | feature_list

    8 feature_list: feature ';'
    9             | feature ';' feature_list

   10 feature: OBJECTID '(' optional_formal_list ')' ':' TYPEID '{' expr '}'
   11        | OBJECTID ':' TYPEID
   12        | OBJECTID ':' TYPEID ASSIGN expr

   13 optional_formal_list: /* empty */
   14                     | formal_list

   15 formal_list: formal
   16            | formal ',' formal_list

   17 formal: OBJECTID ':' TYPEID

   18 expr: OBJECTID ASSIGN expr
   19     | expr '.' OBJECTID '(' optional_arg_list ')'
   20     | expr '@' TYPEID '.' OBJECTID '(' optional_arg_list ')'
   21     | OBJECTID '(' optional_arg_list ')'
   22     | IF expr THEN expr ELSE expr FI
   23     | WHILE expr LOOP expr POOL
   24     | '{' expr_seq '}'
   25     | LET let_list
   26     | CASE expr OF case_branch_list ESAC
   27     | NEW TYPEID
   28     | ISVOID expr
   29     | '~' expr
   30     | NOT expr
   31     | expr '+' expr
   32     | expr '-' expr
   33     | expr '*' expr
   34     | expr '/' expr
   35     | expr '<' expr
   36     | expr LE expr
   37     | expr '=' expr
   38     | '(' expr ')'
   39     | OBJECTID
   40     | INT_CONST
   41     | STR_CONST
   42     | BOOL_CONST

   43 optional_arg_list: /* empty */
   44                  | arg_list

   45 arg_list: expr
   46         | expr ',' arg_list

   47 expr_seq: expr ';'
   48         | expr ';' expr_seq

   49 let_list: let_binding IN expr
   50         | let_binding ',' let_list

   51 let_binding: OBJECTID ':' TYPEID
   52            | OBJECTID ':' TYPEID ASSIGN expr

   53 case_branch_list: case_branch
   54                 | case_branch case_branch_list

   55 case_branch: OBJECTID ':' TYPEID DARROW expr ';'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 10 19 20 21 38
')' (41) 10 19 20 21 38
'*' (42) 33
'+' (43) 31
',' (44) 16 46 50
'-' (45) 32
'.' (46) 19 20
'/' (47) 34
':' (58) 10 11 12 17 51 52 55
';' (59) 4 5 8 9 47 48 55
'<' (60) 35
'=' (61) 37
'@' (64) 20
'{' (123) 4 5 10 24
'}' (125) 4 5 10 24
'~' (126) 29
error (256)
STR_CONST (258) 41
TYPEID (259) 4 5 10 11 12 17 20 27 51 52 55
OBJECTID (260) 10 11 12 17 18 19 20 21 39 51 52 55
INT_CONST (261) 40
BOOL_CONST (262) 42
CLASS (263) 4 5
IF (264) 22
ELSE (265) 22
FI (266) 22
LET (267) 25
IN (268) 49
INHERITS (269) 5
THEN (270) 22
WHILE (271) 23
LOOP (272) 23
POOL (273) 23
CASE (274) 26
ESAC (275) 26
OF (276) 26
NOT (277) 30
NEW (278) 27
ISVOID (279) 28
ASSIGN (280) 12 18 52
LE (281) 36
DARROW (282) 55
LET_STMT (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3, on right: 1 3
class (48)
    on left: 4 5, on right: 2 3
optional_feature_list (49)
    on left: 6 7, on right: 4 5
feature_list (50)
    on left: 8 9, on right: 7 9
feature (51)
    on left: 10 11 12, on right: 8 9
optional_formal_list (52)
    on left: 13 14, on right: 10
formal_list (53)
    on left: 15 16, on right: 14 16
formal (54)
    on left: 17, on right: 15 16
expr (55)
    on left: 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35
    36 37 38 39 40 41 42, on right: 10 12 18 19 20 22 23 26 28 29 30
    31 32 33 34 35 36 37 38 45 46 47 48 49 52 55
optional_arg_list (56)
    on left: 43 44, on right: 19 20 21
arg_list (57)
    on left: 45 46, on right: 44 46
expr_seq (58)
    on left: 47 48, on right: 24 48
let_list (59)
    on left: 49 50, on right: 25 50
let_binding (60)
    on left: 51 52, on right: 49 50
case_branch_list (61)
    on left: 53 54, on right: 26 54
case_branch (62)
    on left: 55, on right: 53 54


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    4 class: CLASS . TYPEID '{' optional_feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';'

    TYPEID  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: class_list .

    $default  reduce using rule 1 (program)


State 4

    2 class_list: class .
    3           | class . class_list

    CLASS  shift, and go to state 1

    $default  reduce using rule 2 (class_list)

    class_list  go to state 7
    class       go to state 4


State 5

    4 class: CLASS TYPEID . '{' optional_feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' optional_feature_list '}' ';'

    INHERITS  shift, and go to state 8
    '{'       shift, and go to state 9


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 class_list: class class_list .

    $default  reduce using rule 3 (class_list)


State 8

    5 class: CLASS TYPEID INHERITS . TYPEID '{' optional_feature_list '}' ';'

    TYPEID  shift, and go to state 10


State 9

    4 class: CLASS TYPEID '{' . optional_feature_list '}' ';'

    OBJECTID  shift, and go to state 11

    $default  reduce using rule 6 (optional_feature_list)

    optional_feature_list  go to state 12
    feature_list           go to state 13
    feature                go to state 14


State 10

    5 class: CLASS TYPEID INHERITS TYPEID . '{' optional_feature_list '}' ';'

    '{'  shift, and go to state 15


State 11

   10 feature: OBJECTID . '(' optional_formal_list ')' ':' TYPEID '{' expr '}'
   11        | OBJECTID . ':' TYPEID
   12        | OBJECTID . ':' TYPEID ASSIGN expr

    '('  shift, and go to state 16
    ':'  shift, and go to state 17


State 12

    4 class: CLASS TYPEID '{' optional_feature_list . '}' ';'

    '}'  shift, and go to state 18


State 13

    7 optional_feature_list: feature_list .

    $default  reduce using rule 7 (optional_feature_list)


State 14

    8 feature_list: feature . ';'
    9             | feature . ';' feature_list

    ';'  shift, and go to state 19


State 15

    5 class: CLASS TYPEID INHERITS TYPEID '{' . optional_feature_list '}' ';'

    OBJECTID  shift, and go to state 11

    $default  reduce using rule 6 (optional_feature_list)

    optional_feature_list  go to state 20
    feature_list           go to state 13
    feature                go to state 14


State 16

   10 feature: OBJECTID '(' . optional_formal_list ')' ':' TYPEID '{' expr '}'

    OBJECTID  shift, and go to state 21

    $default  reduce using rule 13 (optional_formal_list)

    optional_formal_list  go to state 22
    formal_list           go to state 23
    formal                go to state 24


State 17

   11 feature: OBJECTID ':' . TYPEID
   12        | OBJECTID ':' . TYPEID ASSIGN expr

    TYPEID  shift, and go to state 25


State 18

    4 class: CLASS TYPEID '{' optional_feature_list '}' . ';'

    ';'  shift, and go to state 26


State 19

    8 feature_list: feature ';' .
    9             | feature ';' . feature_list

    OBJECTID  shift, and go to state 11

    $default  reduce using rule 8 (feature_list)

    feature_list  go to state 27
    feature       go to state 14


State 20

    5 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list . '}' ';'

    '}'  shift, and go to state 28


State 21

   17 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 29


State 22

   10 feature: OBJECTID '(' optional_formal_list . ')' ':' TYPEID '{' expr '}'

    ')'  shift, and go to state 30


State 23

   14 optional_formal_list: formal_list .

    $default  reduce using rule 14 (optional_formal_list)


State 24

   15 formal_list: formal .
   16            | formal . ',' formal_list

    ','  shift, and go to state 31

    $default  reduce using rule 15 (formal_list)


State 25

   11 feature: OBJECTID ':' TYPEID .
   12        | OBJECTID ':' TYPEID . ASSIGN expr

    ASSIGN  shift, and go to state 32

    $default  reduce using rule 11 (feature)


State 26

    4 class: CLASS TYPEID '{' optional_feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 27

    9 feature_list: feature ';' feature_list .

    $default  reduce using rule 9 (feature_list)


State 28

    5 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' . ';'

    ';'  shift, and go to state 33


State 29

   17 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 34


State 30

   10 feature: OBJECTID '(' optional_formal_list ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 35


State 31

   16 formal_list: formal ',' . formal_list

    OBJECTID  shift, and go to state 21

    formal_list  go to state 36
    formal       go to state 24


State 32

   12 feature: OBJECTID ':' TYPEID ASSIGN . expr

    STR_CONST   shift, and go to state 37
    OBJECTID    shift, and go to state 38
    INT_CONST   shift, and go to state 39
    BOOL_CONST  shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NOT         shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 51


State 33

    5 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 34

   17 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 17 (formal)


State 35

   10 feature: OBJECTID '(' optional_formal_list ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 52


State 36

   16 formal_list: formal ',' formal_list .

    $default  reduce using rule 16 (formal_list)


State 37

   41 expr: STR_CONST .

    $default  reduce using rule 41 (expr)


State 38

   18 expr: OBJECTID . ASSIGN expr
   21     | OBJECTID . '(' optional_arg_list ')'
   39     | OBJECTID .

    ASSIGN  shift, and go to state 53
    '('     shift, and go to state 54

    $default  reduce using rule 39 (expr)


State 39

   40 expr: INT_CONST .

    $default  reduce using rule 40 (expr)


State 40

   42 expr: BOOL_CONST .

    $default  reduce using rule 42 (expr)


State 41

   22 expr: IF . expr THEN expr ELSE expr FI

    STR_CONST   shift, and go to state 37
    OBJECTID    shift, and go to state 38
    INT_CONST   shift, and go to state 39
    BOOL_CONST  shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NOT         shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 55


State 42

   25 expr: LET . let_list

    OBJECTID  shift, and go to state 56

    let_list     go to state 57
    let_binding  go to state 58


State 43

   23 expr: WHILE . expr LOOP expr POOL

    STR_CONST   shift, and go to state 37
    OBJECTID    shift, and go to state 38
    INT_CONST   shift, and go to state 39
    BOOL_CONST  shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NOT         shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 59


State 44

   26 expr: CASE . expr OF case_branch_list ESAC

    STR_CONST   shift, and go to state 37
    OBJECTID    shift, and go to state 38
    INT_CONST   shift, and go to state 39
    BOOL_CONST  shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NOT         shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 60


State 45

   30 expr: NOT . expr

    STR_CONST   shift, and go to state 37
    OBJECTID    shift, and go to state 38
    INT_CONST   shift, and go to state 39
    BOOL_CONST  shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NOT         shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 61


State 46

   27 expr: NEW . TYPEID

    TYPEID  shift, and go to state 62


State 47

   28 expr: ISVOID . expr

    STR_CONST   shift, and go to state 37
    OBJECTID    shift, and go to state 38
    INT_CONST   shift, and go to state 39
    BOOL_CONST  shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NOT         shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 63


State 48

   29 expr: '~' . expr

    STR_CONST   shift, and go to state 37
    OBJECTID    shift, and go to state 38
    INT_CONST   shift, and go to state 39
    BOOL_CONST  shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NOT         shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 64


State 49

   24 expr: '{' . expr_seq '}'

    STR_CONST   shift, and go to state 37
    OBJECTID    shift, and go to state 38
    INT_CONST   shift, and go to state 39
    BOOL_CONST  shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NOT         shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr      go to state 65
    expr_seq  go to state 66


State 50

   38 expr: '(' . expr ')'

    STR_CONST   shift, and go to state 37
    OBJECTID    shift, and go to state 38
    INT_CONST   shift, and go to state 39
    BOOL_CONST  shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NOT         shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 67


State 51

   12 feature: OBJECTID ':' TYPEID ASSIGN expr .
   19 expr: expr . '.' OBJECTID '(' optional_arg_list ')'
   20     | expr . '@' TYPEID '.' OBJECTID '(' optional_arg_list ')'
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr

    LE   shift, and go to state 68
    '<'  shift, and go to state 69
    '='  shift, and go to state 70
    '-'  shift, and go to state 71
    '+'  shift, and go to state 72
    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '@'  shift, and go to state 75
    '.'  shift, and go to state 76

    $default  reduce using rule 12 (feature)


State 52

   10 feature: OBJECTID '(' optional_formal_list ')' ':' TYPEID . '{' expr '}'

    '{'  shift, and go to state 77


State 53

   18 expr: OBJECTID ASSIGN . expr

    STR_CONST   shift, and go to state 37
    OBJECTID    shift, and go to state 38
    INT_CONST   shift, and go to state 39
    BOOL_CONST  shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NOT         shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 78


State 54

   21 expr: OBJECTID '(' . optional_arg_list ')'

    STR_CONST   shift, and go to state 37
    OBJECTID    shift, and go to state 38
    INT_CONST   shift, and go to state 39
    BOOL_CONST  shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NOT         shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    $default  reduce using rule 43 (optional_arg_list)

    expr               go to state 79
    optional_arg_list  go to state 80
    arg_list           go to state 81


State 55

   19 expr: expr . '.' OBJECTID '(' optional_arg_list ')'
   20     | expr . '@' TYPEID '.' OBJECTID '(' optional_arg_list ')'
   22     | IF expr . THEN expr ELSE expr FI
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr

    THEN  shift, and go to state 82
    LE    shift, and go to state 68
    '<'   shift, and go to state 69
    '='   shift, and go to state 70
    '-'   shift, and go to state 71
    '+'   shift, and go to state 72
    '*'   shift, and go to state 73
    '/'   shift, and go to state 74
    '@'   shift, and go to state 75
    '.'   shift, and go to state 76


State 56

   51 let_binding: OBJECTID . ':' TYPEID
   52            | OBJECTID . ':' TYPEID ASSIGN expr

    ':'  shift, and go to state 83


State 57

   25 expr: LET let_list .

    $default  reduce using rule 25 (expr)


State 58

   49 let_list: let_binding . IN expr
   50         | let_binding . ',' let_list

    IN   shift, and go to state 84
    ','  shift, and go to state 85


State 59

   19 expr: expr . '.' OBJECTID '(' optional_arg_list ')'
   20     | expr . '@' TYPEID '.' OBJECTID '(' optional_arg_list ')'
   23     | WHILE expr . LOOP expr POOL
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr

    LOOP  shift, and go to state 86
    LE    shift, and go to state 68
    '<'   shift, and go to state 69
    '='   shift, and go to state 70
    '-'   shift, and go to state 71
    '+'   shift, and go to state 72
    '*'   shift, and go to state 73
    '/'   shift, and go to state 74
    '@'   shift, and go to state 75
    '.'   shift, and go to state 76


State 60

   19 expr: expr . '.' OBJECTID '(' optional_arg_list ')'
   20     | expr . '@' TYPEID '.' OBJECTID '(' optional_arg_list ')'
   26     | CASE expr . OF case_branch_list ESAC
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr

    OF   shift, and go to state 87
    LE   shift, and go to state 68
    '<'  shift, and go to state 69
    '='  shift, and go to state 70
    '-'  shift, and go to state 71
    '+'  shift, and go to state 72
    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '@'  shift, and go to state 75
    '.'  shift, and go to state 76


State 61

   19 expr: expr . '.' OBJECTID '(' optional_arg_list ')'
   20     | expr . '@' TYPEID '.' OBJECTID '(' optional_arg_list ')'
   30     | NOT expr .
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr

    LE   shift, and go to state 68
    '<'  shift, and go to state 69
    '='  shift, and go to state 70
    '-'  shift, and go to state 71
    '+'  shift, and go to state 72
    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '@'  shift, and go to state 75
    '.'  shift, and go to state 76

    $default  reduce using rule 30 (expr)


State 62

   27 expr: NEW TYPEID .

    $default  reduce using rule 27 (expr)


State 63

   19 expr: expr . '.' OBJECTID '(' optional_arg_list ')'
   20     | expr . '@' TYPEID '.' OBJECTID '(' optional_arg_list ')'
   28     | ISVOID expr .
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr

    '@'  shift, and go to state 75
    '.'  shift, and go to state 76

    $default  reduce using rule 28 (expr)


State 64

   19 expr: expr . '.' OBJECTID '(' optional_arg_list ')'
   20     | expr . '@' TYPEID '.' OBJECTID '(' optional_arg_list ')'
   29     | '~' expr .
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr

    '@'  shift, and go to state 75
    '.'  shift, and go to state 76

    $default  reduce using rule 29 (expr)


State 65

   19 expr: expr . '.' OBJECTID '(' optional_arg_list ')'
   20     | expr . '@' TYPEID '.' OBJECTID '(' optional_arg_list ')'
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr
   47 expr_seq: expr . ';'
   48         | expr . ';' expr_seq

    LE   shift, and go to state 68
    '<'  shift, and go to state 69
    '='  shift, and go to state 70
    '-'  shift, and go to state 71
    '+'  shift, and go to state 72
    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '@'  shift, and go to state 75
    '.'  shift, and go to state 76
    ';'  shift, and go to state 88


State 66

   24 expr: '{' expr_seq . '}'

    '}'  shift, and go to state 89


State 67

   19 expr: expr . '.' OBJECTID '(' optional_arg_list ')'
   20     | expr . '@' TYPEID '.' OBJECTID '(' optional_arg_list ')'
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr
   38     | '(' expr . ')'

    LE   shift, and go to state 68
    '<'  shift, and go to state 69
    '='  shift, and go to state 70
    '-'  shift, and go to state 71
    '+'  shift, and go to state 72
    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '@'  shift, and go to state 75
    '.'  shift, and go to state 76
    ')'  shift, and go to state 90


State 68

   36 expr: expr LE . expr

    STR_CONST   shift, and go to state 37
    OBJECTID    shift, and go to state 38
    INT_CONST   shift, and go to state 39
    BOOL_CONST  shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NOT         shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 91


State 69

   35 expr: expr '<' . expr

    STR_CONST   shift, and go to state 37
    OBJECTID    shift, and go to state 38
    INT_CONST   shift, and go to state 39
    BOOL_CONST  shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NOT         shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 92


State 70

   37 expr: expr '=' . expr

    STR_CONST   shift, and go to state 37
    OBJECTID    shift, and go to state 38
    INT_CONST   shift, and go to state 39
    BOOL_CONST  shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NOT         shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 93


State 71

   32 expr: expr '-' . expr

    STR_CONST   shift, and go to state 37
    OBJECTID    shift, and go to state 38
    INT_CONST   shift, and go to state 39
    BOOL_CONST  shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NOT         shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 94


State 72

   31 expr: expr '+' . expr

    STR_CONST   shift, and go to state 37
    OBJECTID    shift, and go to state 38
    INT_CONST   shift, and go to state 39
    BOOL_CONST  shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NOT         shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 95


State 73

   33 expr: expr '*' . expr

    STR_CONST   shift, and go to state 37
    OBJECTID    shift, and go to state 38
    INT_CONST   shift, and go to state 39
    BOOL_CONST  shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NOT         shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 96


State 74

   34 expr: expr '/' . expr

    STR_CONST   shift, and go to state 37
    OBJECTID    shift, and go to state 38
    INT_CONST   shift, and go to state 39
    BOOL_CONST  shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NOT         shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 97


State 75

   20 expr: expr '@' . TYPEID '.' OBJECTID '(' optional_arg_list ')'

    TYPEID  shift, and go to state 98


State 76

   19 expr: expr '.' . OBJECTID '(' optional_arg_list ')'

    OBJECTID  shift, and go to state 99


State 77

   10 feature: OBJECTID '(' optional_formal_list ')' ':' TYPEID '{' . expr '}'

    STR_CONST   shift, and go to state 37
    OBJECTID    shift, and go to state 38
    INT_CONST   shift, and go to state 39
    BOOL_CONST  shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NOT         shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 100


State 78

   18 expr: OBJECTID ASSIGN expr .
   19     | expr . '.' OBJECTID '(' optional_arg_list ')'
   20     | expr . '@' TYPEID '.' OBJECTID '(' optional_arg_list ')'
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr

    LE   shift, and go to state 68
    '<'  shift, and go to state 69
    '='  shift, and go to state 70
    '-'  shift, and go to state 71
    '+'  shift, and go to state 72
    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '@'  shift, and go to state 75
    '.'  shift, and go to state 76

    $default  reduce using rule 18 (expr)


State 79

   19 expr: expr . '.' OBJECTID '(' optional_arg_list ')'
   20     | expr . '@' TYPEID '.' OBJECTID '(' optional_arg_list ')'
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr
   45 arg_list: expr .
   46         | expr . ',' arg_list

    LE   shift, and go to state 68
    '<'  shift, and go to state 69
    '='  shift, and go to state 70
    '-'  shift, and go to state 71
    '+'  shift, and go to state 72
    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '@'  shift, and go to state 75
    '.'  shift, and go to state 76
    ','  shift, and go to state 101

    $default  reduce using rule 45 (arg_list)


State 80

   21 expr: OBJECTID '(' optional_arg_list . ')'

    ')'  shift, and go to state 102


State 81

   44 optional_arg_list: arg_list .

    $default  reduce using rule 44 (optional_arg_list)


State 82

   22 expr: IF expr THEN . expr ELSE expr FI

    STR_CONST   shift, and go to state 37
    OBJECTID    shift, and go to state 38
    INT_CONST   shift, and go to state 39
    BOOL_CONST  shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NOT         shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 103


State 83

   51 let_binding: OBJECTID ':' . TYPEID
   52            | OBJECTID ':' . TYPEID ASSIGN expr

    TYPEID  shift, and go to state 104


State 84

   49 let_list: let_binding IN . expr

    STR_CONST   shift, and go to state 37
    OBJECTID    shift, and go to state 38
    INT_CONST   shift, and go to state 39
    BOOL_CONST  shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NOT         shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 105


State 85

   50 let_list: let_binding ',' . let_list

    OBJECTID  shift, and go to state 56

    let_list     go to state 106
    let_binding  go to state 58


State 86

   23 expr: WHILE expr LOOP . expr POOL

    STR_CONST   shift, and go to state 37
    OBJECTID    shift, and go to state 38
    INT_CONST   shift, and go to state 39
    BOOL_CONST  shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NOT         shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 107


State 87

   26 expr: CASE expr OF . case_branch_list ESAC
